@@ -119,7 +119,8 @@
         "html2text/html2text": "^4",
         "drmonty/datatables-responsive": "^2.2",
         "pragmarx/google2fa": "^6",
-        "galleriajs/galleria": "^1"
+        "galleriajs/galleria": "^1",
+        "rzani/zbar-qrdecoder": "^2"
     },
     "require-dev": {
         "phpunit/phpunit": "^4",
